--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -59,7 +59,13 @@ body {
   --scrollPercentage: 0;
   font-size: 16px;
 }
+@media (prefers-reduced-motion: no-preference) {
+  :root {
+    scroll-behavior: smooth;
+  }
+}
 // Reset fonts for relevant elements
+
 button,
 input,
 select,
