--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -17,6 +17,7 @@
 
       &>a {
         font-size: 11px;
+        line-height: initial;
         letter-spacing: .7px;
         text-decoration: none;
         white-space: nowrap;
@@ -26,7 +27,7 @@
         padding: 3px 10px;
         border-radius: @border-radius-base;
         border: 1px solid fade(@link-color, 80%);
-        transition: all .2s ease;
+        transition: all .1s ease;
         transition-property: background-color, color;
 
         &:visited {
