Front page deloverskrift

--- a/docs/assets/css/doctypes/fullwidthfrontpage.css
+++ b/docs/assets/css/doctypes/fullwidthfrontpage.css
@@ -20,6 +20,9 @@
   .gridcontent>.gcrow:not(.full-page-width)>.container {
     max-width: 746px;
   }
+  .deloverskrift {
+    font-size: 25px;
+  }
 }
 
 @media (min-width: 992px) {
