--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -302,6 +302,7 @@ nav[aria-label="Pager"] {
 }
 
 .readAll {
+  float: right;
   margin-top: 14px;
   margin-bottom: 0;
   border: 1px solid @text-color;
