--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -21,18 +21,6 @@ table.dataTable tbody+tfoot {
   display: none;
 }
 
-@media screen and (min-width: 768px) {
-  table.dataTable thead+tfoot {
-    display: table-header-group;
-  }
-
-  table.dataTable tfoot input {
-    font-weight: normal;
-    width: 100% !important;
-    padding: 5px 6px;
-  }
-}
-
 .table.dataTable tr td input:placeholder-shown {
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -52,11 +40,22 @@ table.dataTable tbody+tfoot {
 
 @media screen and (min-width: 768px) {
   .dataTable {
-    font-size: 12px;
+    font-size: 13px;
+  }
+
+  table.dataTable thead+tfoot {
+    display: table-header-group;
+  }
+
+  table.dataTable tfoot input {
+    font-weight: normal;
+    width: 100% !important;
+    padding: 5px 6px;
   }
 }
 
-.dataTable th:focus, .dataTable td:focus {
+.dataTable th:focus,
+.dataTable td:focus {
   outline: 1px dotted #000;
 }
 
@@ -78,7 +77,11 @@ table.dataTable thead .sorting_desc_disabled {
   cursor: pointer;
 }
 
-.dataTable thead .sorting:after, .dataTable thead .sorting_asc:after, .dataTable thead .sorting_asc_disabled:after, .dataTable thead .sorting_desc:after, .dataTable thead .sorting_desc_disabled:after {
+.dataTable thead .sorting:after,
+.dataTable thead .sorting_asc:after,
+.dataTable thead .sorting_asc_disabled:after,
+.dataTable thead .sorting_desc:after,
+.dataTable thead .sorting_desc_disabled:after {
   position: absolute;
   bottom: 8px;
   right: 8px;
@@ -129,17 +132,22 @@ table.dataTable tbody td {
   padding: 8px 10px;
 }
 
-table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
+table.dataTable.row-border tbody th,
+table.dataTable.row-border tbody td,
+table.dataTable.display tbody th,
+table.dataTable.display tbody td {
   border-top: 1px solid #ddd;
 }
 
 table.dataTable.row-border tbody tr:first-child th,
-table.dataTable.row-border tbody tr:first-child td, table.dataTable.display tbody tr:first-child th,
+table.dataTable.row-border tbody tr:first-child td,
+table.dataTable.display tbody tr:first-child th,
 table.dataTable.display tbody tr:first-child td {
   border-top: none;
 }
 
-table.dataTable.cell-border tbody th, table.dataTable.cell-border tbody td {
+table.dataTable.cell-border tbody th,
+table.dataTable.cell-border tbody td {
   border-top: 1px solid #ddd;
   border-right: 1px solid #ddd;
 }
@@ -154,25 +162,30 @@ table.dataTable.cell-border tbody tr:first-child td {
   border-top: none;
 }
 
-table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
+table.dataTable.stripe tbody tr.odd,
+table.dataTable.display tbody tr.odd {
   background-color: #f9f9f9;
 }
 
-table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.odd.selected {
+table.dataTable.stripe tbody tr.odd.selected,
+table.dataTable.display tbody tr.odd.selected {
   background-color: #acbad4;
 }
 
-table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
+table.dataTable.hover tbody tr:hover,
+table.dataTable.display tbody tr:hover {
   background-color: #f6f6f6;
 }
 
-table.dataTable.hover tbody tr:hover.selected, table.dataTable.display tbody tr:hover.selected {
+table.dataTable.hover tbody tr:hover.selected,
+table.dataTable.display tbody tr:hover.selected {
   background-color: #aab7d1;
 }
 
 table.dataTable.order-column tbody tr>.sorting_1,
 table.dataTable.order-column tbody tr>.sorting_2,
-table.dataTable.order-column tbody tr>.sorting_3, table.dataTable.display tbody tr>.sorting_1,
+table.dataTable.order-column tbody tr>.sorting_3,
+table.dataTable.display tbody tr>.sorting_1,
 table.dataTable.display tbody tr>.sorting_2,
 table.dataTable.display tbody tr>.sorting_3 {
   background-color: #fafafa;
@@ -180,81 +193,100 @@ table.dataTable.display tbody tr>.sorting_3 {
 
 table.dataTable.order-column tbody tr.selected>.sorting_1,
 table.dataTable.order-column tbody tr.selected>.sorting_2,
-table.dataTable.order-column tbody tr.selected>.sorting_3, table.dataTable.display tbody tr.selected>.sorting_1,
+table.dataTable.order-column tbody tr.selected>.sorting_3,
+table.dataTable.display tbody tr.selected>.sorting_1,
 table.dataTable.display tbody tr.selected>.sorting_2,
 table.dataTable.display tbody tr.selected>.sorting_3 {
   background-color: #acbad5;
 }
 
-table.dataTable.display tbody tr.odd>.sorting_1, table.dataTable.order-column.stripe tbody tr.odd>.sorting_1 {
+table.dataTable.display tbody tr.odd>.sorting_1,
+table.dataTable.order-column.stripe tbody tr.odd>.sorting_1 {
   background-color: #f1f1f1;
 }
 
-table.dataTable.display tbody tr.odd>.sorting_2, table.dataTable.order-column.stripe tbody tr.odd>.sorting_2 {
+table.dataTable.display tbody tr.odd>.sorting_2,
+table.dataTable.order-column.stripe tbody tr.odd>.sorting_2 {
   background-color: #f3f3f3;
 }
 
-table.dataTable.display tbody tr.odd>.sorting_3, table.dataTable.order-column.stripe tbody tr.odd>.sorting_3 {
+table.dataTable.display tbody tr.odd>.sorting_3,
+table.dataTable.order-column.stripe tbody tr.odd>.sorting_3 {
   background-color: whitesmoke;
 }
 
-table.dataTable.display tbody tr.odd.selected>.sorting_1, table.dataTable.order-column.stripe tbody tr.odd.selected>.sorting_1 {
+table.dataTable.display tbody tr.odd.selected>.sorting_1,
+table.dataTable.order-column.stripe tbody tr.odd.selected>.sorting_1 {
   background-color: #a6b4cd;
 }
 
-table.dataTable.display tbody tr.odd.selected>.sorting_2, table.dataTable.order-column.stripe tbody tr.odd.selected>.sorting_2 {
+table.dataTable.display tbody tr.odd.selected>.sorting_2,
+table.dataTable.order-column.stripe tbody tr.odd.selected>.sorting_2 {
   background-color: #a8b5cf;
 }
 
-table.dataTable.display tbody tr.odd.selected>.sorting_3, table.dataTable.order-column.stripe tbody tr.odd.selected>.sorting_3 {
+table.dataTable.display tbody tr.odd.selected>.sorting_3,
+table.dataTable.order-column.stripe tbody tr.odd.selected>.sorting_3 {
   background-color: #a9b7d1;
 }
 
-table.dataTable.display tbody tr.even>.sorting_1, table.dataTable.order-column.stripe tbody tr.even>.sorting_1 {
+table.dataTable.display tbody tr.even>.sorting_1,
+table.dataTable.order-column.stripe tbody tr.even>.sorting_1 {
   background-color: #fafafa;
 }
 
-table.dataTable.display tbody tr.even>.sorting_2, table.dataTable.order-column.stripe tbody tr.even>.sorting_2 {
+table.dataTable.display tbody tr.even>.sorting_2,
+table.dataTable.order-column.stripe tbody tr.even>.sorting_2 {
   background-color: #fcfcfc;
 }
 
-table.dataTable.display tbody tr.even>.sorting_3, table.dataTable.order-column.stripe tbody tr.even>.sorting_3 {
+table.dataTable.display tbody tr.even>.sorting_3,
+table.dataTable.order-column.stripe tbody tr.even>.sorting_3 {
   background-color: #fefefe;
 }
 
-table.dataTable.display tbody tr.even.selected>.sorting_1, table.dataTable.order-column.stripe tbody tr.even.selected>.sorting_1 {
+table.dataTable.display tbody tr.even.selected>.sorting_1,
+table.dataTable.order-column.stripe tbody tr.even.selected>.sorting_1 {
   background-color: #acbad5;
 }
 
-table.dataTable.display tbody tr.even.selected>.sorting_2, table.dataTable.order-column.stripe tbody tr.even.selected>.sorting_2 {
+table.dataTable.display tbody tr.even.selected>.sorting_2,
+table.dataTable.order-column.stripe tbody tr.even.selected>.sorting_2 {
   background-color: #aebcd6;
 }
 
-table.dataTable.display tbody tr.even.selected>.sorting_3, table.dataTable.order-column.stripe tbody tr.even.selected>.sorting_3 {
+table.dataTable.display tbody tr.even.selected>.sorting_3,
+table.dataTable.order-column.stripe tbody tr.even.selected>.sorting_3 {
   background-color: #afbdd8;
 }
 
-table.dataTable.display tbody tr:hover>.sorting_1, table.dataTable.order-column.hover tbody tr:hover>.sorting_1 {
+table.dataTable.display tbody tr:hover>.sorting_1,
+table.dataTable.order-column.hover tbody tr:hover>.sorting_1 {
   background-color: #eaeaea;
 }
 
-table.dataTable.display tbody tr:hover>.sorting_2, table.dataTable.order-column.hover tbody tr:hover>.sorting_2 {
+table.dataTable.display tbody tr:hover>.sorting_2,
+table.dataTable.order-column.hover tbody tr:hover>.sorting_2 {
   background-color: #ececec;
 }
 
-table.dataTable.display tbody tr:hover>.sorting_3, table.dataTable.order-column.hover tbody tr:hover>.sorting_3 {
+table.dataTable.display tbody tr:hover>.sorting_3,
+table.dataTable.order-column.hover tbody tr:hover>.sorting_3 {
   background-color: #efefef;
 }
 
-table.dataTable.display tbody tr:hover.selected>.sorting_1, table.dataTable.order-column.hover tbody tr:hover.selected>.sorting_1 {
+table.dataTable.display tbody tr:hover.selected>.sorting_1,
+table.dataTable.order-column.hover tbody tr:hover.selected>.sorting_1 {
   background-color: #a2aec7;
 }
 
-table.dataTable.display tbody tr:hover.selected>.sorting_2, table.dataTable.order-column.hover tbody tr:hover.selected>.sorting_2 {
+table.dataTable.display tbody tr:hover.selected>.sorting_2,
+table.dataTable.order-column.hover tbody tr:hover.selected>.sorting_2 {
   background-color: #a3b0c9;
 }
 
-table.dataTable.display tbody tr:hover.selected>.sorting_3, table.dataTable.order-column.hover tbody tr:hover.selected>.sorting_3 {
+table.dataTable.display tbody tr:hover.selected>.sorting_3,
+table.dataTable.order-column.hover tbody tr:hover.selected>.sorting_3 {
   background-color: #a5b2cb;
 }
 
@@ -262,7 +294,8 @@ table.dataTable.no-footer {
   border-bottom: 1px solid #eee;
 }
 
-table.dataTable.nowrap th, table.dataTable.nowrap td {
+table.dataTable.nowrap th,
+table.dataTable.nowrap td {
   white-space: nowrap;
 }
 
@@ -421,7 +454,8 @@ table.dataTable td {
   cursor: pointer;
 }
 
-.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+.dataTables_wrapper .dataTables_paginate .paginate_button.current,
+.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
   z-index: 3;
   color: #fff;
   background-color: #757575;
@@ -429,7 +463,9 @@ table.dataTable td {
   cursor: default;
 }
 
-.dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled,
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover,
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
   color: #757575;
   background-color: #fff;
   border-color: #ddd;
@@ -486,12 +522,16 @@ table.dataTable td {
   -webkit-overflow-scrolling: touch;
 }
 
-.dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>thead>tr>th, .dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>thead>tr>td, .dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>tbody>tr>th, .dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>tbody>tr>td {
+.dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>thead>tr>th,
+.dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>thead>tr>td,
+.dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>tbody>tr>th,
+.dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>tbody>tr>td {
   vertical-align: middle;
 }
 
 .dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>thead>tr>th>div.dataTables_sizing,
-.dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>thead>tr>td>div.dataTables_sizing, .dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>tbody>tr>th>div.dataTables_sizing,
+.dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>thead>tr>td>div.dataTables_sizing,
+.dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>tbody>tr>th>div.dataTables_sizing,
 .dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody>table>tbody>tr>td>div.dataTables_sizing {
   height: 0;
   overflow: hidden;
@@ -581,14 +621,16 @@ table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th:first-child {
   cursor: pointer;
 }
 
-.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child, .dataTable.dtr-inline.collapsed>tbody>tr>th:first-child {
+.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child,
+.dataTable.dtr-inline.collapsed>tbody>tr>th:first-child {
   position: relative;
   padding-left: 10px;
   cursor: pointer;
   padding-bottom: 45px;
 }
 
-.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before, .dataTable.dtr-inline.collapsed>tbody>tr>th:first-child:before {
+.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before,
+.dataTable.dtr-inline.collapsed>tbody>tr>th:first-child:before {
   bottom: 9px;
   left: 11px;
   height: 20px;
@@ -610,13 +652,15 @@ table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th:first-child {
   font-size: 12px;
 }
 
-.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before, .dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:before {
+.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,
+.dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:before {
   content: "\e253";
   padding-top: 5px;
   padding-bottom: 1px;
 }
 
-.dataTable.dtr-inline.collapsed>tbody>tr>td:not(.child):first-child:after, .dataTable.dtr-inline.collapsed>tbody>tr>th:not(.child):first-child:after {
+.dataTable.dtr-inline.collapsed>tbody>tr>td:not(.child):first-child:after,
+.dataTable.dtr-inline.collapsed>tbody>tr>th:not(.child):first-child:after {
   bottom: 9px;
   left: 38px;
   height: 20px;
@@ -641,15 +685,18 @@ table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th:first-child {
   cursor: pointer;
 }
 
-.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:after, .dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:after {
+.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:after,
+.dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:after {
   content: "Skjul detaljer";
 }
 
-html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr>td:not(.child):first-child:after, html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr>th:not(.child):first-child:after {
+html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr>td:not(.child):first-child:after,
+html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr>th:not(.child):first-child:after {
   content: "Show details";
 }
 
-html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:after, html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:after {
+html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:after,
+html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:after {
   content: "Hide details";
 }
 
