Add root properties

--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -57,6 +57,8 @@ body {
 :root {
   --scroll-bar: 17px;
   --scrollPercentage: 0;
+  --gutterWidth: @grid-gutter-width;
+  --gutterHeight: @grid-gutter-height;
   font-size: 16px;
 }
 @media (prefers-reduced-motion: no-preference) {
