Added colors to :root

--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -59,6 +59,26 @@ body {
   --scrollPercentage: 0;
   --gutterWidth: @grid-gutter-width;
   --gutterHeight: @grid-gutter-height;
+  --box-text-light: @gridbox-text-light;
+  --box-text-dark: @gridbox-text-dark;
+  --red1: @red1;
+  --red2: @red2;
+  --red3: @red3;
+  --blue1: @blue1;
+  --blue2: @blue2;
+  --blue3: @blue3;
+  --teal1: @teal1;
+  --teal2: @teal2;
+  --teal3: @teal3;
+  --green1: @green1;
+  --green2: @green2;
+  --green3: @green3;
+  --grey1: @grey1;
+  --grey2: @grey2;
+  --grey3: @grey3;
+  --white1: @white1;
+  --white2: @white2;
+  --white3: @white3;
   font-size: 16px;
 }
 @media (prefers-reduced-motion: no-preference) {
