Added colors to :root

--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -59,6 +59,7 @@ body {
   --scrollPercentage: 0;
   --gutterWidth: @grid-gutter-width;
   --gutterHeight: @grid-gutter-height;
+  --body-color: @gray-dark;
   --box-text-light: @gridbox-text-light;
   --box-text-dark: @gridbox-text-dark;
   --red1: @red1;
