--- a/docs/assets/css/doctypes/form.css
+++ b/docs/assets/css/doctypes/form.css
@@ -49,11 +49,14 @@
 .g-recaptcha > div {
   overflow: hidden;
   width: 80%!important;
-  min-width: 330px;
-  min-height: 85px;
+  width: 330px;
+  max-width: 100vw;
+  min-height: 90px;
 }
 
 .g-recaptcha iframe {
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
