--- a/docs/assets/css/doctypes/form.css
+++ b/docs/assets/css/doctypes/form.css
@@ -48,8 +48,7 @@
 
 .g-recaptcha > div {
   overflow: hidden;
-  width: 80%!important;
-  width: 330px;
+  width: 330px!important;
   max-width: 100vw;
   min-height: 90px;
 }
