--- a/docs/assets/css/doctypes/form.css
+++ b/docs/assets/css/doctypes/form.css
@@ -1,7 +1,8 @@
 /* Multiple select styles */
 @import url("../multiple-select.min.css");
 
-.error, .gdpr-error-msg {
+.error,
+.gdpr-error-msg {
   color: #7b161a;
   margin: 5px 0;
 }
@@ -46,11 +47,15 @@
   display: inline;
 }
 
-.g-recaptcha > div {
+.g-recaptcha>div {
   overflow: hidden;
-  width: 308px!important;
+  width: 308px !important;
   max-width: 100vw;
   min-height: 90px;
+}
+
+.g-recaptcha div {
+  height: inherit;
 }
 
 .g-recaptcha iframe {
@@ -59,3 +64,6 @@
   height: 100%;
 }
 
+#submit_div {
+  padding-left: 0;
+}
