--- a/less/ku-videoplayer.less
+++ b/less/ku-videoplayer.less
@@ -4,6 +4,10 @@
 // --------------------------------------------------
 @import "variables.less";
 @import "mixins.less";
+.video-container .video {
+    width: 100%;
+    display: block;
+}
 
 .control-layer {
   display: none;
