--- a/less/ku-videoplayer.less
+++ b/less/ku-videoplayer.less
@@ -6,7 +6,10 @@
 @import "mixins.less";
 .video-container .video {
     width: 100%;
+    max-width: 100%;
+    height: auto;
     display: block;
+    object-fit: contain;
 }
 
 .control-layer {
