Added css variables

--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -60,8 +60,10 @@ body {
   --gutterWidth: @grid-gutter-width;
   --gutterHeight: @grid-gutter-height;
   --body-color: @gray-dark;
+  --outline-color: @outline-color2;
   --box-text-light: @gridbox-text-light;
   --box-text-dark: @gridbox-text-dark;
+  --black: @gray-base;
   --red1: @red1;
   --red2: @red2;
   --red3: @red3;
@@ -80,6 +82,7 @@ body {
   --white1: @white1;
   --white2: @white2;
   --white3: @white3;
+  --white: @white-color;
   font-size: 16px;
 }
 @media (prefers-reduced-motion: no-preference) {
