Link list color

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -150,6 +150,7 @@
 .linkslist {
   margin: 10px 0;
   position: relative;
+  color: var(--body-color);
   background-color: @white-color;
 
   .menu-trigger {
