--- a/less/mixins/ku-page-full-width.less
+++ b/less/mixins/ku-page-full-width.less
@@ -2,10 +2,8 @@
 // Usage: .page-full-width();
 
 .page-full-width() {
-  width: calc(100vw - 9px); // 9px is the width of the scrollbar
   position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
+  width: calc(100vw - var(--scroll-bar));
+  margin-left: calc(-50vw + 50% + (var(--scroll-bar)/ 2));
+  margin-right: calc(-50vw + 50% + (var(--scroll-bar)/ 2));
 }
