--- a/docs/assets/css/unit-frontpages/unit-frontpage.css
+++ b/docs/assets/css/unit-frontpages/unit-frontpage.css
@@ -15,6 +15,7 @@
 .jumpcolumn li a {
   display: block;
   position: relative;
+  padding-right: 20px;
   color: #901a1e !important;
   text-decoration: none
 }
