--- a/docs/assets/css/unit-frontpages/unit-frontpage.css
+++ b/docs/assets/css/unit-frontpages/unit-frontpage.css
@@ -41,6 +41,53 @@
   -webkit-font-smoothing: antialiased
 }
 
+.play-pause-button {
+  position: absolute;
+  bottom: 5px;
+  left: 20px;
+  height: 30px;
+  width: 30px;
+  font-size: 18px;
+  line-height: 0;
+  padding: 6px;
+  cursor: pointer;
+  color: var(--white, #fff);
+  background: rgba(0, 0, 0, .4);
+  border-radius: 50%;
+  border: none;
+}
+
+.play-pause-button::before {
+  /* Pause */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fff' class='bi bi-pause-fill' viewBox='0 0 16 16'%3E%3Cpath d='M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z'/%3E%3C/svg%3E");
+  display: inline-block;
+  content: "";
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+  height: 100%;
+  width: 100%;
+}
+
+.play-pause-button.paused::before {
+  /* Play */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fff' class='bi bi-play-fill' viewBox='0 0 16 16'%3E%3Cpath d='m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z'/%3E%3C/svg%3E");
+}
+
+.play-pause-button:hover {
+  background: rgba(0, 0, 0, .1);
+}
+
+.play-pause-button:focus {
+  outline: 1px solid var(--outline, #2c6694);
+  outline-offset: 1px;
+  border: 1px solid var(--white, #fff);
+}
+
+.slick-arrow::before {
+  opacity: .3
+}
+
 @media (min-width: 992px) {
   .jumpcolumn li {
     Font-size: 24px;
@@ -78,10 +125,25 @@
 
   blockquote::before {
     font-size: 65px;
-}
+  }
 
   blockquote footer {
     font-size: 15px;
     font-weight: 400
+  }
+
+  .full-width {
+    margin-left: calc(var(--gutterWidth) * -1);
+    margin-right: calc(var(--gutterWidth) * -1);
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
+
+  .full-width .gccolumn:first-child {
+    padding-left: var(--gutterWidth);
+  }
+
+  .full-width .gccolumn:last-child {
+    padding-right: var(--gutterWidth);
   }
 }
