--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -350,7 +350,7 @@
 }
 // Captions - KU specific
 
-.slick-slide {
+.slick-slide, .image-presentation {
   .caption {
     // Textbar bottom as default
     display: block;
