--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -382,6 +382,12 @@ form.gdpr-accept {
     }
   }
 
+  img {
+    height: 100%;
+    max-width: none;
+    object-fit: cover;
+  }
+
   @media (min-width: @screen-md) {
     height: @gridbox1;
   }
