--- a/docs/_includes/components/ku-tiles.html
+++ b/docs/_includes/components/ku-tiles.html
@@ -147,22 +147,26 @@
 </div>
 </div>
   {% highlight html %}
-  <article aria-label="..." class="tilebox">
-    <a class="tile-link" href="#">
-      <div class="tile-img">
-        <img alt="" src="image-100x600px.jpg">
-      </div>
-      <div class="tile-content">
-        <div class="tile-cat">
-          <div class="header-small">Category</div>
-          <div class="date">03.11.2070</div>
-        </div>
-        <h3 class="tile-header">Meatball nulla aliquip cillum meatloaf tail proident in chicken corned beef commodo eu.</h3>
-        <div class="tile-body">
-          <span class="tile-teaser">Jerky veniam incididunt excepteur alcatra duis pariatur bresaola aute dolore nisi pork loin eiusmod labore.</span>
-        </div>
-      </div>
-    </a>
-  </article>
+  <div class="newsbox">
+    <div class="tiles-x">
+      <article aria-label="..." class="tilebox">
+        <a class="tile-link" href="#">
+          <div class="tile-img">
+            <img alt="" src="https://cms.ku.dk/bootstrap/images/fallback/fallback-image.png">
+          </div>
+          <div class="tile-content">
+            <div class="tile-cat">
+              <div class="header-small">Category</div>
+              <div class="date">03.11.2070</div>
+            </div>
+            <h3 class="tile-header">Meatball nulla aliquip cillum meatloaf tail proident in chicken corned beef commodo eu.</h3>
+            <div class="tile-body">
+              <span class="tile-teaser">Jerky veniam incididunt excepteur alcatra duis pariatur bresaola aute dolore nisi pork loin eiusmod labore.</span>
+            </div>
+          </div>
+        </a>
+      </article>
+    </div>
+  </div>
   {% endhighlight %}
 </div>
