--- a/docs/assets/css/unit-frontpages/unit-frontpage.css
+++ b/docs/assets/css/unit-frontpages/unit-frontpage.css
@@ -93,6 +93,10 @@
 }
 
 @media (min-width: 992px) {
+  .image-presentation {
+    height: 400px;
+  }
+
   .jumpcolumn li {
     Font-size: 24px;
   }
