--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -369,6 +369,11 @@ form.gdpr-accept {
   position: relative;
   overflow: hidden;
 
+  &.slick-slide {
+    display: block;
+    float: none;
+  }
+
   &>a {
     position: inherit;
     display: flex;
