--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -369,7 +369,7 @@ form.gdpr-accept {
   position: relative;
   overflow: hidden;
 
-  &.slick-slide {
+  &>.slick-slide {
     display: block;
     float: none;
   }
