Row margin for certain doctypes

--- a/docs/assets/css/doctypes/fullwidthfrontpage.css
+++ b/docs/assets/css/doctypes/fullwidthfrontpage.css
@@ -3,7 +3,7 @@
   padding-top: 0;
 }
 
-.gridcontent>.row>.container>.row {
+.gridcontent>.row>.container>.row:last-child {
   margin-bottom: 0;
 }
 
