Admin grid style

--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5545,7 +5545,7 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
  }
 
  .col-disabled {
-  background-color: #ddd;
+  background-color: #ddd!important;
  }
 
  .admincontentwrapper #content img {
