Gridbox header reset

--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -38,7 +38,7 @@
       letter-spacing: 0.4px;
 
       h3 {
-        font-size: inherit;
+        font-size: 17px;
         font-weight: inherit;
         line-height: @line-height-small;
         letter-spacing: inherit;
