--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -236,3 +236,21 @@ hr {
     background-color: rgba(0,0,0,0);
   }
 }
+
+
+.site-content-width {
+  padding: var(--gutterHeight) 0;
+  margin-left: calc(var(--gutterWidth) * -1);
+  margin-right: calc(var(--gutterWidth) * -1);
+}
+
+@media (min-width: @screen-sm-min) {
+
+  .site-content-width .gccolumn:last-child {
+    padding-right: var(--gutterWidth);
+  }
+
+  .site-content-width .gccolumn:first-child {
+    padding-left: var(--gutterWidth);
+  }
+}
